--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "image-segmentation"
+name = "instance-segmentation"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
